sm8250-common: overlay: Ignore CNE in location indicator
Change-Id: I6b1a55860ef933bfaf1f910da3829fd3c3850728
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: madmax7896 <madmax78968@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -350,5 +350,8 @@
 
     <!-- Smart charging -->
     <bool name="config_smartChargingAvailable">true</bool>
-
+    
+    <!-- Package name of a telephony-related system app, such as an IMS service.
+         Exempted from privacy indicators. -->
+    <string name="config_systemTelephonyPackage" translatable="false">com.qualcomm.qti.cne</string>
 </resources>
